--- a/public/auth/form.css
+++ b/public/auth/form.css
@@ -2,6 +2,9 @@ form hr{
  border-color: var(--color-primary-200);
  margin: var(--space-4);
 }
+p{
+ color: rgb(246, 76, 76);
+}
 
 label{
  display: block;
