--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -8,15 +8,18 @@
  <main>
     <h1>Login</h1>
     <form action="/login" method="POST">
+        <% if (userInput.hasError){ %>
+            <p><%= userInput.message %></p>
+        <% } %>
         <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
         <p>
             <label for="email">E-Mail</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" value="<%= userInput.email %>">
         </p>
      
         <p>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" value="<%= userInput.password %>">
         </p>
        
         <button class="btn">Login</button>
