--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -2,6 +2,21 @@
   <div><a href="#">WDE</a></div>
   <nav>
     <ul>
+
+      <li><a href="/">Shop</a></li>
+      <li><a href="/cart">Cart</a></li>
+      <% if(!locals.isAdmin){ %>
+      <li><a href="/order">Order</a></li>
+      <% } %>
+      <% if(locals.isAdmin){ %>
+        <li><a href="/admin/products">Manage Product</a></li>  
+        <li><a href="/admin/order">Manage Orders</a></li>
+      <% } %>
+      <% if(!locals.isAuth) {%>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/signup">Signup</a></li>
+
+      <% } %>
       <% if(locals.isAuth) {%>
         <form action="/logout" method="POST">
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
