--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -13,5 +13,5 @@
     />
     <link rel="stylesheet" href="/auth/base.css">
     <link rel="stylesheet" href="/auth/navigation.css">
-    <script src="scripts/mobile.js" defer></script>
+    <script src="/scripts/mobile.js" defer></script>
     
