--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -16,7 +16,7 @@
     <% if(locals.isAuth) {%>
       <form action="/logout" method="POST">
           <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
-          <li><button>Logout</button></li>
+          <li><button id="logout">Logout</button></li>
       </form>
     <% } %>
   </ul>
