--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -3,7 +3,7 @@
   <div class="product-content">
     <h2><%= product.title %></h2>
     <div class="product-action">
-      <a href="/admin/product/<%= product.image %>" class="btn alt-btn">View & Edit</a>
+      <a href="/admin/product/<%= product.id %>" class="btn alt-btn">View & Edit</a>
       <button class="btn alt-btn">Delete</button>
     </div>
   </div>
