--- a/views/admin/products/update-product.ejs
+++ b/views/admin/products/update-product.ejs
@@ -1,13 +1,13 @@
 <%- include("../../shared/includes/head", {PageTitle: "Add New Product"})  %>
 <link rel="stylesheet" href="/auth/addProduct.css">
-<script src="/scripts/prev-image.js"></script>
+<script src="prev-image.js"></script>
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
  <main>
     <h1>Add New Product</h1>
 
-    <%- include('includes/product-form', {submitUrl: '/admin/products', imageRequired: true}) %>
+    <%- include('includes/product-form', {submitUrl: '/admin/products/' + product.id, product: product, imageRequired: false }) %>
 
  </main>
 
