--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -1,5 +1,5 @@
 <header id="header-menu">
-  <div id="logo"><a href="#">WDE</a></div>
+  <div id="logo"><a href="/">WDE</a></div>
   <nav>
    <%- include("nav-items") %>
   </nav>
