--- a/views/admin/products/update-product.ejs
+++ b/views/admin/products/update-product.ejs
@@ -1,6 +1,6 @@
 <%- include("../../shared/includes/head", {PageTitle: "Add New Product"})  %>
 <link rel="stylesheet" href="/auth/addProduct.css">
-<script src="prev-image.js"></script>
+<script src="/scripts/prev-image.js" defer></script>
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
