--- a/public/auth/addProduct.css
+++ b/public/auth/addProduct.css
@@ -38,6 +38,7 @@ main form textarea{
  width: 4rem;
  height: 4rem;
  border-radius: var(--border-radius-small);
+ object-fit: cover;
  display: none;
 }
 
