--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -4,7 +4,9 @@
     <h2><%= product.title %></h2>
     <div class="product-action">
       <a href="/admin/product/<%= product.id %>" class="btn alt-btn">View & Edit</a>
-      <button class="btn alt-btn">Delete</button>
+      <!-- <form action="/admin/product-delete/<%= product.id %>?_csrf=<%= locals.csrfToken %>" method="POST"> -->
+        <button id="delete-btn" class="btn alt-btn" data-productId= "<%= product.id %>" data-crsf= "<%= locals.csrfToken %>">Delete</button>
+      <!-- </form> -->
     </div>
   </div>
   
