see product detail functionality added

--- a/public/auth/base.css
+++ b/public/auth/base.css
@@ -32,6 +32,7 @@ html{
     --space-4: 1rem;
     --space-6: 1.5rem;
     --space-8: 2rem;
+    --space-10: 7rem;
   
     --border-radius-small: 4px;
     --border-radius-medium: 6px;
