--- a/views/customer/product/products.ejs
+++ b/views/customer/product/products.ejs
@@ -1,12 +1,20 @@
 <%- include("../../shared/includes/head", {PageTitle: "All-Products"})  %>
-
-
+<link rel="stylesheet" href="/style/products.css">
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
  <main>
     <h1>All Products</h1>
-    <p>List of products' going on here ....</p>
+  
+    <section>
+      <ul id="product-container">
+       <% for(const product of products){ %>
+          <li class="products-list">
+             <%- include('../../shared/includes/product-item', {product: product}) %>
+          </li>
+          <% } %>
+      </ul>
+    </section>
 
  </main>
 
