--- a/views/admin/products/includes/product-form.ejs
+++ b/views/admin/products/includes/product-form.ejs
@@ -6,7 +6,7 @@
     <p>
        <label for="image">Image</label>
        <div id="img-container">
-          <input type="file" id="image" name="image" accept="image/png, image/jpg" <% if(imageRequired){%> required <% } %>>
+          <input type="file" id="image" name="image" accept="image/png, image/jpeg" <% if(imageRequired){%> required <% } %>>
           <img src="/products/assets/images/3f7a5700-d64a-4bc1-a210-8f74965c773e-lolo3.png" alt="prev-image" id="img">
        </div>
     </p>
