--- a/public/auth/base.css
+++ b/public/auth/base.css
@@ -103,3 +103,11 @@ a{
 /* #delete-btn{
  height: 100%;
 } */
+
+.badge{
+    margin-left: var(--space-2);
+    background-color: var(--color-primary-500);
+    padding: 0.15rem var(--space-4);
+    border-radius: 15rem;
+    color: var(--color-primary-500-contrast);
+}
