--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -1,7 +1,7 @@
 <ul class="items-list">
   <% if(!locals.isAdmin){ %>
     <li><a href="/">Shop</a></li>
-    <li><a href="/cart">Cart</a></li>
+    <li><a href="/cart">Cart <span class="badge"><%= locals.cart.totalQuantity %></span></a></li>
     <li><a href="/order">Order</a></li>
     <% } %>
     <% if(locals.isAdmin){ %>
