--- a/views/customer/product/product-detail.ejs
+++ b/views/customer/product/product-detail.ejs
@@ -1,5 +1,6 @@
 <%- include("../../shared/includes/head", {PageTitle: "All-Products"})  %>
 <link rel="stylesheet" href="/style/product-detail.css">
+<script src="/scripts/cart-management.js" defer></script>
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
@@ -12,7 +13,7 @@
         <div>
         <h1><%= product.title %></h1>
         <h6>$<%= product.price %></h6>
-        <button class="btn">Add to Cart</button>
+        <button class="btn" data-productId="<%= product.id %>" data-csrf="<%= locals.csrfToken %>">Add to Cart</button>
         </div>
        </div>
 
