--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -1,11 +1,11 @@
 <article class="cart-item">
     <div class="item-info">
         <h1><%= item.product.title %></h1>
-        <p>$ <%= item.totalPrice.toFixed(2)%> <span> ($ <%= item.product.price.toFixed(2) %>)</span></p>
+        <p>$ <span class="itemtotalPrices"><%= item.totalPrice.toFixed(2)%></span> <span class="itemSinglePrice"> ($ <%= item.product.price.toFixed(2) %>)</span></p>
     </div>
 
     <div class="item-action">
         <input type="number" value="<%= item.Quantity %>">
-        <button class="btn alt-btn">Update</button>
+        <button class="btn alt-btn" data-productId="<%= item.product.id %>" data-csrfToken="<%= locals.csrfToken %>">Update</button>
     </div>
 </article>
