--- a/public/style/cart.css
+++ b/public/style/cart.css
@@ -57,6 +57,12 @@
     color: var(--color-primary-500);
 }
 
+#total-cart .login-instruction{
+ font-size: 1rem;
+ font-family: inherit;
+ text-align: center;
+}
+
 @media (min-width: 38rem) {
     .cart-item{
         display: flex;
