--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -21,14 +21,15 @@
       <div id="total-cart">
         <p>Total: $ <span><%= locals.cart.itemsTotalPrice.toFixed(2) %></span></p>
       
-        <%  if(locals.isAuth) { %>
+        <%  if(locals.isAuth && locals.cart.items.length > 0) { %>
           <form action="/order" method="POST">
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
             <button class="btn">Buy Product</buttn>
           </form>
 
         <% } else {%>
-          <p class="login-instruction">Please login to proceed and purchase</p>
+          <p class="login-instruction">Please login to proceed and purchase <br> add have prouduct</p>
+       
         <%  } %>
     </div>
     </section>
